# StudyMate---ASE-project

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  richtext_converted_to_markdown.md
.github/workflows/: audio-transcription-ci.yaml  character-recognition-ci.yaml  voice-transcription-ci.yml
AI - python/: README.md
AI - python/DockerAI/: compose.yml
AI - python/DockerAI/fastapi/: Dockerfile  app.py  requirements.txt
AI - python/DockerAI/ollama/: Dockerfile  pull-llama3.sh
AI - python/pythonAI/: microservice.py  requirements.txt
api-gateway/: dockerfile  endpoints.md  nginx.conf  readme.md
audio-transcription/: .pre-commit-config.yaml  pyproject.toml
character-recognition/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  server.py
character-recognition/app/: __init__.py  extractor.py
character-recognition/tests/: conftest.py  test_extractor.py  test_routes.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.tsx
frontend/frontend/src/components/: Docu.tsx  Homescreen.tsx  Paraphrizer.tsx  Summarizer.tsx  Textareas.tsx
frontend/src/: App.tsx  UploadHandlers.ts  main.tsx
frontend/src/clients/: paraphrasing_tool.ts
frontend/src/components/: About.tsx  AuthenticationPage.tsx  Docu.tsx  Footer.tsx  Header.tsx  Homescreen.tsx  Login.tsx  Paraphrizer.tsx  Profile.tsx  Register.tsx  Sidebar.tsx  Summarizer.tsx  TextInputForm.tsx  TextProcessor.tsx  Textareas.css  Textareas.tsx  style.css  style_authenticationPage.css
frontend/src/components/quiz/: QuestionRenderer.tsx  Quiz.tsx  QuizInput.tsx  QuizInteractor.tsx  QuizRenderer.tsx  SectionRenderer.tsx  testData.json
frontend/src/utils/: auth.ts
paraphrasing-tool/: .env  .gitignore  Dockerfile  openapi.yaml  pyproject.toml  requirements.txt
paraphrasing-tool/app/: __init__.py  config.py  llm.py  llm_api.py  main.py  models.py
paraphrasing-tool/tests/: example.json  test_llm.py  test_quiz_parser.py
shared/openapi/: paraphrasing-tool.yaml
summarizing-tool/: README.md  compose.yml
summarizing-tool/fastapi/: Dockerfile  app.py
summarizing-tool/ollama/: pull-llama3.sh
user-management/: .gitignore  Dockerfile  inspect_db.py  pyproject.toml  requirements.txt
user-management/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
user-management/tests/: test_api.py
voice-transcription/: .gitignore  Dockerfile  app.py  pyproject.toml  readme.md
voice-transcription/tests/: test_endpoints.py
voice-transcription/vosk_transcriptor/: transcriptor.py
voice-transcription/vosk_transcriptor/utils/: ffmpeg_util.py
