[tool.poetry]
name = "AI-Summarizer Web-Serivce"
version = "0.1.0"
description = "Web-Baesd tool for summarizing texts using AI"
authors = [""]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
bcrypt = "^4.2.0"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
