[tool.poetry]
name = "paraphrasing-tool"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
openai = "^1.59.7"
gunicorn = "^23.0.0"
flask-cors = "^5.0.0"
urllib3 = ">=1.25.3,<3.0.0"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"
python-dotenv = "^1.0.1"
openapi-server = {path = "app/generated/server"}


[tool.poetry.group.dev.dependencies]
openapi-generator-cli = "^7.10.0.post0"
pytest = "^8.3.4"
deepdiff = "^8.1.1"
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
