[tool.poetry]
name = "user-management-microservice"
version = "0.1.0"
description = "A microservice for managing user registration, authentication, and data storage, built with Flask and designed for integration into the ASE AI Summarizer application."
authors = ["Deyvla2 <91744946+Deyvla2@users.noreply.github.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
bcrypt = "^4.2.0"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
