[tool.poetry]
name = "user-management-microservice"
version = "0.1.0"
description = "A microservice for managing user registration, authentication, and data storage"
authors = ["Deyvla2 <91744946+Deyvla2@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
bcrypt = "^4.2.0"
fastapi = "^0.78.0"
sqlalchemy = "^1.4.32"
uvicorn = "^0.17.6"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
pydantic = "^1.10.0"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
