[tool.poetry]
name = "voice-transcription"
version = "0.1.0"
description = "A microservice for voice transription."
authors = ["Amir Hanna <amir.elkess@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
vosk = "^0.3.45"
python-multipart = "^0.0.19"
uvicorn = {extras = ["standard"], version = "^0.32.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
